<resources>
    <string name="app_name">USEME</string>
    <string name="title_login">Login</string>
    <string name="title_add_task">Create task</string>
    <string name="title_settings">Settings</string>
    <string name="form_subject">Выберите предмет</string>
    <string name="form_topic">Выберите раздел</string>
    <string name="form_category">Выберите категорию</string>
    <string name="form_condition">Введите условие</string>
    <string name="form_answer">Введите ответ</string>
    <string name="text_new_task">Новая задача</string>
    <string name="button_save_task">Создать задачу</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="teacher">Учитель</string>
    <string name="student">Ученик</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="useme">USEME</string>
    <string name="authorizationTitle">Авторизация</string>
    <string name="sign_in_title">Вход</string>
    <string name="registration_title">Регистрация</string>
    <string name="already_not_have_account">Ещё нет аккаунта?</string>
    <string name="fill_fields">Заполните форму регистрации</string>
    <string name="lastname">Фамилия</string>
    <string name="firstname">Имя</string>
    <string name="passwordCheck">Подтверждение пароля</string>
    <string name="female">Женский</string>
    <string name="male">Мужской</string>
    <string name="gender">Выберите пол</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="middlename">Отчество</string>
    <string name="required">Нужно заполнить</string>
    <string name="required_chose">Необходимо выбрать</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Profile_bottom">Профиль</string>
    <string name="statistic_bottom">Статистика</string>
    <string name="groups_bottom">Группы</string>
    <string name="homeworks_bottom">Мои Д/З</string>
    <string name="tasks_bottom">Задачи</string>
    <string name="group_profile_bottom">Группа</string>
    <string name="new_homework_bottom">Д/З</string>
    <string name="group_members_bottom">Ученики</string>
    <string name="exit_from_account">Выйти из акканута</string>
    <string name="firstname_profile">Имя:</string>
    <string name="lastname_profile">Фамилия:</string>
    <string name="gender_profile">Пол:</string>
    <string name="change_info">Изменить данные</string>
    <string name="middlename_profile">Отчество:</string>
    <string name="task_item_condition">Условие:</string>
    <string name="task_item_answer">Ответ:</string>
    <string name="add_task_button_text">Добавить задачу</string>
    <string name="subject_title">Предмет</string>
    <string name="topic_title">Раздел</string>
    <string name="category_topic">Категория</string>
    <string name="id">ID</string>
    <string name="filter_title">Фильтр</string>
    <string name="apply">Применить</string>
    <string name="reset">Сброс</string>
    <string name="save_info">Сохранить данные</string>
    <string name="date_of_birth_profile">Дата\nрождения:</string>
    <string name="groups_title">Мои группы</string>
    <string name="task_title">Задачи</string>
    <string name="group_page_title">Учащиеся</string>
    <string name="create_group_button">Создать группу</string>
    <string name="homeworks_title">Домашние задания</string>
    <string name="add_hometask">Добавить Д/З</string>
    <string name="applications">Приглашения</string>
    <string name="solve_title">Решение</string>
    <string name="answer">Ответ</string>
    <string name="save">сохранить</string>
    <string name="exit">выйти</string>
    <string name="new_group">Новая группа</string>
    <string name="create_group">Создать группу</string>
    <string name="fill_target_subject">Выберите целевой предмет</string>
    <string name="fill_group_name">Введите название группы</string>
    <string name="fill_group_description">Введите описание группы</string>
    <string name="group_name_text">Название:</string>
    <string name="target_subject_text">Целевой предмет:</string>
    <string name="description_text">Описание:</string>
    <string name="application_title">Заявки на вступление</string>
    <string name="send_application">Послать заявку</string>
    <string name="form_group_id">ID группы</string>
    <string name="group_password">Пароль:</string>
    <string name="fill_group_password">Введите пароль для вступления</string>
    <string name="accept">Принять</string>
    <string name="decline">Отклонить</string>
    <string name="homework_title">Название Д/З</string>
    <string name="pick_a_date">Выбрать дату рождения</string>
    <string name="choose_date_of_birth">Выберите дату рождения</string>
    <string name="choose_deadline">Укажите дедлайн</string>
    <string name="selected_tasks">Добавленные задачи:</string>
    <string name="add_tasks">Добавить задачи</string>
    <string name="add_task">Добавить задачу</string>
    <string name="change_homework">Изменить Д/З</string>
    <string name="change_homework_title">Изменение Д/З</string>
    <string name="fill_title_homework">Введите название</string>
    <string name="change_deadline">Поменять дедлайн</string>
    <string name="statistic_title">Статистика</string>
</resources>