<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".fragment.CreateTaskFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="30dp"
            android:textSize="40sp"
            android:text="@string/text_new_task"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/form_subject"
            android:minHeight="48dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldTopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/form_topic"
            android:minHeight="48dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/form_category"
            android:minHeight="48dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/form_condition"
            android:minHeight="48dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/form_textFieldAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/form_answer"
            android:minHeight="48dp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/form_saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:minHeight="60dp"
        android:text="@string/button_save_task"/>

</RelativeLayout>