<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".app.group.ChangeHomeworkFragment"
    android:background="@color/colorBackground"
    android:padding="8dp">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.Material3.Button.IconButton"
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:icon="@drawable/ic_back_24dp"
            app:iconTint="@color/black" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/change_homework_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@id/container"
        android:id="@+id/TIL_HomeworkTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:helperText="@string/homework_title"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TIET_HomeworkTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fill_title_homework"
            android:minHeight="48dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pickDeadlineButton"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TIL_HomeworkTitle"
        android:text="@string/change_deadline"
        android:textAlignment="center"
        android:textSize="16sp"
        app:strokeColor="@color/colorPrimary"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_tasks_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pickDeadlineButton"
        android:text="@string/add_tasks"
        android:textAlignment="center"
        android:textSize="16sp"
        app:strokeColor="@color/colorPrimary"
        android:layout_marginBottom="10dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_tasks_button"
        android:layout_centerVertical="true"
        android:text="@string/selected_tasks"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/task_mini_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/materialTextView"
        android:layout_above="@id/send_homework_button"
        tools:listitem="@layout/task_mini_item"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_homework_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:minHeight="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/change_homework"
        android:textSize="18sp"/>

</RelativeLayout>