<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.authorization.RegistrationTeacherFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:padding="10dp">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/TV_fill_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/fill_fields"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstnameContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TV_fill_fields"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/teacher_registration_form_Firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstname"
                android:minHeight="48dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastnameContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstnameContainer"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/teacher_registration_form_Lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/firstnameContainer"
                android:hint="@string/lastname"
                android:minHeight="48dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/middlenameContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lastnameContainer"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/teacher_registration_form_MiddleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/teacher_registration_form_Lastname"
                android:hint="@string/middlename"
                android:minHeight="48dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/pickDateButton"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/middlenameContainer"
            android:text="@string/choose_date_of_birth"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@color/red_warning"
            app:strokeColor="@color/red_warning"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:id="@+id/containerGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pickDateButton"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/teacher_RB_male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_radio_button"
                    android:gravity="center"
                    android:layoutDirection="rtl"
                    android:padding="10dp"
                    android:text="@string/male"
                    android:textSize="16sp" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/teacher_RB_female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/bg_radio_button"
                    android:gravity="center"
                    android:layoutDirection="rtl"
                    android:padding="10dp"
                    android:text="@string/female"
                    android:textSize="16sp" />
            </RadioGroup>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/teacher_genderTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/gender"
                android:textColor="@color/red_warning"
                android:textSize="16sp" />
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/teacher_containerEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/containerGender"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red_warning">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/teacher_registration_form_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:minHeight="48dp"
                android:textSize="18sp"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/teacher_containerPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/teacher_containerEmail"
            android:layout_marginBottom="16dp"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red_warning"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/teacher_registration_form_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
                android:minHeight="48dp"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/teacher_containerPasswordCheck"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/teacher_containerPassword"
            android:layout_marginBottom="16dp"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red_warning"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/teacher_registration_form_PasswordCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/passwordCheck"
                android:inputType="textPassword"
                android:lines="1"
                android:minHeight="48dp"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/teacher_button_register"
            style="@style/Widget.Material3.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/teacher_containerPasswordCheck"
            android:layout_centerInParent="true"
            android:layout_marginBottom="30dp"
            android:minHeight="60dp"
            android:text="@string/registration_title"
            android:textSize="18sp" />
    </RelativeLayout>
</ScrollView>