<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/colorBackground"
    app:layout_constraintWidth_percent="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filter_TIL_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperTextTextColor="@color/red_warning">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filter_TIET_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="или"
            android:layout_gravity="center"
            android:textSize="16sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filter_TIL_subject"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/subject_title"
            android:minHeight="48dp">
            <AutoCompleteTextView
                android:id="@+id/filter_ACTV_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filter_TIL_topic"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:hint="@string/topic_title"
            android:minHeight="48dp">

            <AutoCompleteTextView
                android:id="@+id/filter_ACTV_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filter_TIL_category"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:hint="@string/category_topic"
            android:minHeight="48dp">

            <AutoCompleteTextView
                android:id="@+id/filter_ACTV_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button"
                android:text="@string/reset"
                android:textSize="24sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button"
                android:layout_alignParentEnd="true"
                android:text="@string/apply"
                android:textSize="24sp"/>
        </RelativeLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>